# cosmotile

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: auto-merge-deps.yml  constraints.txt  publish.yml  release.yml  tests.yml
docs/: authors.md  conf.py  index.md  reference.md  requirements.txt  usage.md
src/cosmotile/: __init__.py  __main__.py  cic.py
tests/: __init__.py  test_cic.py  test_cosmotile.py  test_main.py
